--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     <h1>About me</h1>
     <hr>
     <p>
-    Hi, I'm John. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula
+    Hi, I'm Crystal. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula
     aliquet ipsum non condimentum. Morbi ut dolor posuere, consectetur lorem eget,
     vestibulum massa. In sem nulla, faucibus non finibus at, posuere eu turpis.
     Aliquam eget ante ut ante finibus vulputate. Morbi maximus orci a fringilla
@@ -62,7 +62,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula aliquet ipsum non condimentum. Morbi ut dolor posuere, consectetur lorem eget, vestibulum massa. In sem nulla, faucibus non finibus at, posuere eu turpis. Aliquam eget ante ut ante finibus vulputate. Morbi maximus orci a fringilla eleifend. Pellentesque leo metus, facilisis sit amet velit vitae, scelerisque vulputate tortor. Vestibulum commodo commodo placerat. Phasellus ut velit nec mauris accumsan tempus et dictum quam. Nam elementum vitae odio sit amet facilisis.</p>
 
     <div class="offset">
-      <a href="contemporary.html">&laquo; Back to site</a>
+      <a href="index.html">&laquo; Back to site</a>
     </div>
   </div>
 
