--- a/contemporary.html
+++ b/contemporary.html
@@ -120,11 +120,11 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="alonso-reyes-1-1.jpg" width="200" alt="a cruise ship sailing">
+            <img class="" src="dice-1-1.jpg" width="200" alt="A sparkling set of polyhedral dice">
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
-              <h3>Daydream Leisure Cruises</h3>
+              <h3>Phoenix Dice</h3>
               <p>Promoted customer rewards program.</p>
             </span>
           </div>
@@ -132,11 +132,11 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="alonso-reyes-1-1.jpg" width="200" alt="a cruise ship sailing">
+            <img class="" src="dice-b-1-1.jpg" width="200" alt="A close-up shot of blue polyhedral dice">
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
-              <h3>Daydream Leisure Cruises</h3>
+              <h3>Phoenix Dice</h3>
               <p>Promoted customer rewards program.</p>
             </span>
           </div>
