--- a/about.html
+++ b/about.html
@@ -50,12 +50,7 @@
     <h1>About me</h1>
     <hr>
     <p>
-    Hi, I'm Crystal. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula
-    aliquet ipsum non condimentum. Morbi ut dolor posuere, consectetur lorem eget,
-    vestibulum massa. In sem nulla, faucibus non finibus at, posuere eu turpis.
-    Aliquam eget ante ut ante finibus vulputate. Morbi maximus orci a fringilla
-    eleifend. Pellentesque leo metus, facilisis sit amet velit vitae, scelerisque
-    vulputate tortor.
+    Hi, I'm Crystal. I write stuff. Hire me.
     </p>
     <h1>About this site</h1>
     <hr>
