Fix z-order with JavaScript disabled

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="header-links">
       <a href="placeholder.pdf">résumé</a>
-      <a href="#projects">portfolio</a>
+      <a href="#client-anchor-target">portfolio</a>
       <a href="#contact">contact</a>
     </div>
   </header>
@@ -51,6 +51,8 @@
   <section id="projects" class="project-section">
     <div class="project-container">
       <canvas id="project-canvas" class="project-canvas"></canvas>
+      <!-- Displaced link target to compensate for parallax effect -->
+      <div id="client-anchor-target" style="height: 5rem;"></div>
       <div class="mw40 project-intro slide-parallax" style="--parallax-scroll: 50px;">
         <h2>Clients</h2>
         <p>These are a few of the companies I've worked with:</p>
