--- a/about.html
+++ b/about.html
@@ -8,19 +8,28 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="contemporary.css">
 
   <title>About</title>
 
   <style>
-    h1 {
-      margin-top: 3rem;
+    :root {
+      --header-color: rgb(175, 225, 255);
+      --copy-color: rgb(250, 235, 255);
     }
-    
+
+    h1,h2,h3,h4,h5,h6 {
+      font-weight: 300;
+    }
+
+    h1 {
+      margin-top: 4rem;
+    }
+
     hr {
-      color: rgb(130, 175, 206);
+      color: rgb(128, 165, 189);
     }
 
     p {
@@ -32,13 +41,28 @@
     }
 
     footer {
-      margin-top: 3rem;
+      margin-top: 6rem;
+      min-height: 1rem;
+      padding-bottom: 0rem;
       padding-top: 2rem;
-      min-height: 6rem;
     }
 
-    .offset {
-      margin-top: 6rem;
+    .banner-strip {
+      height: 6rem;
+      background: radial-gradient(
+        130% 55vw ellipse at 10vw 50px,
+        rgb(210, 230, 255) 12%,
+        rgb(153, 193, 254) 32%,
+        rgb(220, 115, 206) 75%,
+        rgb(210, 85, 156) 97%);
+    }
+
+    .header-links {
+      padding-top: 1.5rem;
+    }
+
+    .header-links a {
+      color: rgb(10, 0, 5);
     }
   </style>
 </head>
@@ -55,9 +79,9 @@
       <a href="#contact">contact</a>
     </div>
   </header>
-  
+
+  <div class="banner-strip"></div>
   <div class="mw40 pad-symmetrical main-content">
-    <h1 style="color:orange;">Placeholder</h1>
     <h1>About me</h1>
     <hr>
     <p>
@@ -87,6 +111,5 @@
       </div>
     </div>
   </footer>
-
 </body>
 </html>
