--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <h1>Let's get in touch.</h1>
 
         <p>Whether you need a creative spark to electrify your next ad campaign, or you're putting together mission-critical manuals, I'm here to make your launch a success. Reach out today, so you can reach your audience tomorrow.</p>
-        <p>Say hello through <a href="#"><span class="underline">e-mail</span>
+        <p>Say hello through <a href="mailto:crystalquimby@outlook.com"><span class="underline">e-mail</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
             <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
           </svg></a>
@@ -216,7 +216,7 @@
         </p>
       </div>
       <div class="last-call">
-          <a href="#">Résumé</a> | <a href="#">Contact</a> | <a href="about.html">About</a>
+          <a href="#">Résumé</a> | <a href="mailto:crystalquimby@outlook.com">Contact</a> | <a href="about.html">About</a>
       </div>
       <div class="copyright-notice">
         <span>
