--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="dice-b-1-1.jpg" width="200" alt="A close-up shot of blue polyhedral dice">
+            <a href="phoenix-dice_product-descriptions.pdf"><img class="" src="dice-b-1-1.jpg" width="200" alt="A close-up shot of blue polyhedral dice"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
               <h3>Phoenix Dice</h3>
-              <p>Promoted customer rewards program.</p>
+              <p>Promoted brand awareness through social media campaigns and wrote product descriptions.</p>
             </span>
           </div>
         </li>
