--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <small class="header-fine">technical&nbsp;writer.&nbsp;marketer.</small>
     </div>
     <div class="header-links">
-      <a href="placeholder.pdf">résumé</a>
+      <a href="Crystal Quimby_Resume_2023.pdf">résumé</a>
       <a href="#client-anchor-target">portfolio</a>
       <a href="#contact">contact</a>
     </div>
@@ -162,8 +162,8 @@
             <img src="file-earmark-pdf.svg" alt="An Acrobat reader page">
           </span>
           <span class="technical-details">
-            <h3><a href="#">ABC Transformer Manual</a></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula aliquet ipsum non condimentum.</p>
+            <h3><a href="xm3.1-hp_tm_rev-b.pdf">XM3.1-HP Series Intelligent Broadband UPS Technical Manual</a></h3>
+            <p>With the guidance of subject matter experts including engineers and product managers, I developed the XM3.1-HP power supply technical manual.</p>
           </span>
         </li>
         <li>
@@ -216,7 +216,7 @@
         </p>
       </div>
       <div class="last-call">
-          <a href="#">Résumé</a> | <a href="mailto:crystalquimby@outlook.com">Contact</a> | <a href="about.html">About</a>
+          <a href="Crystal Quimby_Resume_2023.pdf">Résumé</a> | <a href="mailto:crystalquimby@outlook.com">Contact</a> | <a href="about.html">About</a>
       </div>
       <div class="copyright-notice">
         <span>
