--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           </span>
           <span class="technical-details">
             <h3><a href="xm3.1-hp_tm_rev-b.pdf">XM3.1-HP Series Intelligent Broadband UPS Technical Manual</a></h3>
-            <p>With the guidance of subject matter experts including engineers and product managers, I developed the XM3.1-HP power supply technical manual.</p>
+            <p>With the guidance of subject matter experts, I developed the technical manual for the award winning Alpha&copy; XM3.1-HP power supply.</p>
           </span>
         </li>
         <li>
@@ -171,8 +171,8 @@
             <img src="file-earmark-pdf.svg" alt="An Acrobat reader page">
           </span>
           <span class="technical-details">
-            <h3><a href="#">UHF Demodulator User Guide</a></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula aliquet ipsum non condimentum.</p>
+            <h3><a href="xm3.1-hp_3_5_amp_qsg_rev-a1.pdf">XM3.1-HP Series Intelligent Broadband UPS, 3 & 5 Amp Models Quick-start Guide</a></h3>
+            <p>The little brother to the XM3.1-HP power supply, this quick-start guide covers the ins and outs of the 3 and 5 Amp models, and the installation process.</p>
           </span>
         </li>
         <li>
