--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
               <h3>Phoenix Dice</h3>
               <p>Promoted brand awareness through social media campaigns and wrote product descriptions.</p>
+              <p><a href="phoenix-dice_product-descriptions.pdf">See sample.</a></p>
             </span>
           </div>
         </li>
@@ -162,8 +163,8 @@
             <img src="file-earmark-pdf.svg" alt="An Acrobat reader page">
           </span>
           <span class="technical-details">
-            <h3><a href="xm3.1-hp_tm_rev-b.pdf">XM3.1-HP Series Intelligent Broadband UPS Technical Manual</a></h3>
-            <p>With the guidance of subject matter experts, I developed the technical manual for the award winning Alpha&copy; XM3.1-HP power supply.</p>
+            <h3><a href="xm3.1-hp_tm_rev-b.pdf">XM3.1-HP&trade; Series Intelligent Broadband UPS Technical Manual</a></h3>
+            <p>With the guidance of subject matter experts, I developed the technical manual for the award winning Alpha&reg; XM3.1-HP power supply.</p>
           </span>
         </li>
         <li>
@@ -171,7 +172,7 @@
             <img src="file-earmark-pdf.svg" alt="An Acrobat reader page">
           </span>
           <span class="technical-details">
-            <h3><a href="xm3.1-hp_3_5_amp_qsg_rev-a1.pdf">XM3.1-HP Series Intelligent Broadband UPS, 3 & 5 Amp Models Quick-start Guide</a></h3>
+            <h3><a href="xm3.1-hp_3_5_amp_qsg_rev-a1.pdf">XM3.1-HP&trade; Series Intelligent Broadband UPS, 3 & 5 Amp Models Quick-start Guide</a></h3>
             <p>The little brother to the XM3.1-HP power supply, this quick-start guide covers the ins and outs of the 3 and 5 Amp models, and the installation process.</p>
           </span>
         </li>
