--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 90px;">
-              <h3>Fictional Motor Co.</h3>
-              <p>Wrote script for radio ad campaign.</p>
+              <h3>Ford, BMW, and Audi</h3>
+              <p>Wrote and oversaw production of radio ads for world-renowned automotive brands promoting live events in Taiwan, including a roadtrip around the island with Ford and a charity golf tournament sponsored by Audi.</p>
             </span>
           </div>
         </li>
@@ -77,8 +77,8 @@
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
-              <h3>Imaginary Game Studios</h3>
-              <p>Provided copy for full-page magazine ad.</p>
+              <h3>Xbox One</h3>
+              <p>Provided copy for radio ads promoting the release of the Xbox One in the Taiwan market, as well as a live joint event with Xbox and International Community Radio Taipei (ICRT).</p>
             </span>
           </div>
         </li>
@@ -89,8 +89,8 @@
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 80px;">
-              <h3>Invented Airlines</h3>
-              <p>Developed website branding.</p>
+              <h3>EVA Air</h3>
+              <p>Produced copy and directed voice talent for EVA Air radio ads.</p>
             </span>
           </div>
         </li>
