--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 90px;">
               <h3>Ford, BMW, and Audi</h3>
-              <p>Wrote and oversaw production of radio ads for world-renowned automotive brands promoting live events in Taiwan, including a roadtrip around the island with Ford and a charity golf tournament sponsored by Audi.</p>
+              <p>Wrote and oversaw production of radio ads for world-renowned automotive brands promoting live events in Taiwan, including a road trip around the island with Ford and a charity golf tournament sponsored by Audi.</p>
             </span>
           </div>
         </li>
@@ -101,8 +101,8 @@
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 100px">
-              <h3>Anytown Electronics</h3>
-              <p>Designed graphics and type for billboards.</p>
+              <h3>We Love Hakka</h3>
+              <p>Radio scripts that uncovered the beauty and history of Hakka language, culture, and landmarks were anthologized in 2017.</p>
             </span>
           </div>
         </li>
@@ -113,8 +113,8 @@
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
-              <h3>Daydream Leisure Cruises</h3>
-              <p>Promoted customer rewards program.</p>
+              <h3>Star Cruises</h3>
+              <p>Wrote and voice acted in 30-second and 60-second radio advertisements for one of Asia's largest cruise lines.</p>
             </span>
           </div>
         </li>
