--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="./alexandre-debieve-1-1.jpg" width="200" alt="an electronic circuit board">
+            <img class="" src="crystal-quimby-1-1.jpg" width="200" alt="an electronic circuit board">
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 100px">
