--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="crystal-quimby-1-1.jpg" width="200" alt="an electronic circuit board">
+            <img class="" src="crystal-quimby-1-1.jpg" width="200" alt="orange lanterns">
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 100px">
@@ -122,12 +122,12 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="dice-1-1.jpg" width="200" alt="A sparkling set of polyhedral dice">
+            <a href="http://www.icrt.com.tw/wordpress/blog/author/crystalquimby/"><img class="" src="anthony-roberts-1-1.jpg" width="200" alt="An illuminated soundboard">
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
-              <h3>Phoenix Dice</h3>
-              <p>Promoted customer rewards program.</p>
+              <h3>International Community Radio Taipei (ICRT), FM 100 Blog</h3>
+              <p>Contributor to ICRT's blog writing movie reviews, technology, and events happening in Taiwan.</p>
             </span>
           </div>
         </li>
