--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <a href="http://www.icrt.com.tw/wordpress/blog/author/crystalquimby/"><img class="" src="anthony-roberts-1-1.jpg" width="200" alt="An illuminated soundboard">
+            <a href="http://www.icrt.com.tw/wordpress/blog/author/crystalquimby/"><img class="" src="anthony-roberts-1-1.jpg" width="200" alt="An illuminated soundboard"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
