--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
-              <h3>International Community Radio Taipei (ICRT), FM 100 Blog</h3>
-              <p>Contributor to ICRT's blog writing movie reviews, technology, and events happening in Taiwan.</p>
+              <h3>International Community Radio Taipei (ICRT) Blog</h3>
+              <p>Contributor to ICRT's blog where I wrote movie reviews, technology news, and about events happening in Taiwan.</p>
             </span>
           </div>
         </li>
