--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
     </div>
     <div class="header-links">
       <a href="Crystal Quimby_Resume_2023.pdf">résumé</a>
-      <a href="#projects">portfolio</a>
+      <a href="index.html #client-anchor-target">portfolio</a> 
       <a href="#contact">contact</a>
     </div>
   </header>
