--- a/about.html
+++ b/about.html
@@ -70,12 +70,12 @@
 <body>
   <header class="personal-container">
     <div class="header-identity">
-      <h2 class="header-name">crystal quimby</h2>
+      <a href="index.html"><h2 class="header-name">crystal quimby</a></h2>
       <small class="header-fine">technical&nbsp;writer.&nbsp;marketer.</small>
     </div>
     <div class="header-links">
       <a href="Crystal Quimby_Resume_2023.pdf">résumé</a>
-      <a href="index.html #client-anchor-target">portfolio</a> 
+      <a href="#projects">portfolio</a> 
       <a href="#contact">contact</a>
     </div>
   </header>
