--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 <body>
   <header class="personal-container">
     <div class="header-identity">
-      <a href="index.html"><h2 class="header-name">crystal quimby</a></h2>
+      <h2 class="header-name">crystal quimby</h2>
       <small class="header-fine">technical&nbsp;writer.&nbsp;marketer.</small>
     </div>
     <div class="header-links">
