--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
               <h3>Phoenix Dice</h3>
               <p>Promoted brand awareness through social media campaigns and wrote product descriptions.</p>
-              <p><a href="phoenix-dice_product-descriptions.pdf" style="color:#c0ffee;">See sample.</a></p>
+              <p><a href="phoenix-dice_product-descriptions.pdf" style="color:#fca503;">See sample.</a></p>
             </span>
           </div>
         </li>
