--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
             <img src="file-earmark-pdf.svg" alt="An Acrobat reader page">
           </span>
           <span class="technical-details">
-            <h3><a href="#">Flux Capacitor Installation Instructions</a></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula aliquet ipsum non condimentum.</p>
+            <h3><a href="alphagateway-smg-hp_qsg_revA1.pdf">AlphaGateway&trade; SMG-HP Quick-start Guide</a></h3>
+            <p>This guide covers the small form factor DOCSIS 3.1 enabled AlphaGateway SMG-HP. It may be small, but it packs a punch in funcitonality.</p>
           </span>
         </li>
         <li>
