--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
               <h3>International Community Radio Taipei (ICRT) Blog</h3>
               <p>Contributor to ICRT's blog where I wrote movie reviews, technology news, and about events happening in Taiwan.</p>
+              <a href="http://www.icrt.com.tw/wordpress/blog/author/crystalquimby/" style="color:#dc5de8;>See sample.</a>
             </span>
           </div>
         </li>
