--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </span>
           <span class="technical-details">
             <h3><a href="alphagateway-smg-hp_qsg_revA1.pdf">AlphaGateway&trade; SMG-HP Quick-start Guide</a></h3>
-            <p>This guide covers the small form factor DOCSIS 3.1 enabled AlphaGateway SMG-HP. It may be small, but it packs a punch in funcitonality.</p>
+            <p>This guide covers the small form factor DOCSIS 3.1 enabled AlphaGateway SMG-HP. It may be small, but it packs a punch in functionality.</p>
           </span>
         </li>
         <li>
