--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
             <img src="file-earmark-pdf.svg" alt="An Acrobat reader page">
           </span>
           <span class="technical-details">
-            <h3><a href="#">Dilithium Reactor Hazard Notice</a></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula aliquet ipsum non condimentum.</p>
+            <h3><a href="fpe-fiberpatchpanel-tm_rev-a.pdf">Fiber Power Enclosure (FPE) w/ Integrated Fiber Patch Panel Installation Manual</a></h3>
+            <p>This manual takes the user through the process of installing an enclosure along with an integrated fiber patch panel used for cable TV powering applications.</p>
           </span>
         </li>
       </ul>
