--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- Displaced link target to compensate for parallax effect -->
       <div id="client-anchor-target" style="height: 5rem;"></div>
       <div class="mw40 project-intro slide-parallax" style="--parallax-scroll: 50px;">
-        <h2>Clients</h2>
+        <h2>Clientele</h2>
         <p>These are a few of the companies I've worked with:</p>
       </div>
       <ul>
