--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <a href="index.html" style="text-decoration:none;">
   <header class="personal-container">
     <div class="header-identity">
       <h2 class="header-name">crystal quimby</h2>
@@ -29,6 +30,7 @@
       <a href="#contact">contact</a>
     </div>
   </header>
+  </a>
 
   <section class="banner-content">
     <h1 class="tagline">Make your message <em class="clear-emphasis">crystal&nbsp;clear.</em></h1>
