--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       <small class="header-fine">technical&nbsp;writer.&nbsp;marketer.</small>
     </div>
     <div class="header-links">
-      <a href="Crystal Quimby_Resume_2023.pdf">résumé</a>
+      <a href="CrystalQuimby_Resume_2023.pdf">résumé</a>
       <a href="#projects">portfolio</a> 
       <a href="#contact">contact</a>
     </div>
@@ -70,7 +70,7 @@
     <div class="mw40 pad-symmetrical">
       
       <div class="last-call">
-          <a href="Crystal Quimby_Resume_2023.pdf">Résumé</a> | <a href="mailto:crystalquimby@outlook.com">Contact</a> | <a href="about.html">About</a>
+          <a href="CrystalQuimby_Resume_2023.pdf">Résumé</a> | <a href="mailto:crystalquimby@outlook.com">Contact</a> | <a href="about.html">About</a>
       </div>
       <div class="copyright-notice">
         <span>
