--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <small class="header-fine">technical&nbsp;writer.&nbsp;marketer.</small>
     </div>
     <div class="header-links">
-      <a href="Crystal Quimby_Resume_2023.pdf">résumé</a>
+      <a href="CrystalQuimby_Resume_2023.pdf">résumé</a>
       <a href="#client-anchor-target">portfolio</a>
       <a href="#contact">contact</a>
     </div>
@@ -220,7 +220,7 @@
         </p>
       </div>
       <div class="last-call">
-          <a href="Crystal Quimby_Resume_2023.pdf">Résumé</a> | <a href="mailto:crystalquimby@outlook.com">Contact</a> | <a href="about.html">About</a>
+          <a href="CrystalQuimby_Resume_2023.pdf">Résumé</a> | <a href="mailto:crystalquimby@outlook.com">Contact</a> | <a href="about.html">About</a>
       </div>
       <div class="copyright-notice">
         <span>
