Fix header link padding on narrow res

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <a href="index.html" style="text-decoration: none;">
   <header class="personal-container">
     <div class="header-identity">
-      <h2 class="header-name">crystal quimby</h2>
+      <h2 class="header-name">crystal&nbsp;quimby</h2>
       <small class="header-fine">technical&nbsp;writer.&nbsp;marketer.</small>
     </div>
     <div class="header-links">
