Fix About page portfolio & contact

--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
     </div>
     <div class="header-links">
       <a href="CrystalQuimby_Resume_2023.pdf">résumé</a>
-      <a href="#projects">portfolio</a> 
-      <a href="#contact">contact</a>
+      <a href="index.html#projects">portfolio</a> 
+      <a href="index.html#contact">contact</a>
     </div>
   </header>
   </a>
