--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="header-links">
       <a href="CrystalQuimby_Resume_2023.pdf">résumé</a>
-      <a href="#client-anchor-target">portfolio</a>
+      <a href="#clientele">portfolio</a>
       <a href="#contact">contact</a>
     </div>
   </header>
@@ -54,7 +54,7 @@
     <div class="project-container">
       <canvas id="project-canvas" class="project-canvas"></canvas>
       <!-- Displaced link target to compensate for parallax effect -->
-      <div id="client-anchor-target" style="height: 5rem;"></div>
+      <div id="clientele" style="height: 5rem;"></div>
       <div class="mw40 project-intro slide-parallax" style="--parallax-scroll: 50px;">
         <h2>Clientele</h2>
         <p>These are a few of the companies I've worked with:</p>
