Add debug readout for Safari

--- a/safari-test.html
+++ b/safari-test.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="safari-test.css">
   
-  <script defer src="contemporary.js"></script>
+  <script defer src="safari-test.js"></script>
 
   <title>Crystal Quimby - Writer and Marketer.</title>
 </head>
@@ -43,6 +43,9 @@
 
   <!-- personal intro blurb -->
   <section class="blurb-section">
+    <div id="safari-test">
+      Safari test content goes here
+    </div>
     <div class="mw40">
       <h2 class="decorated-square">Need words? I'm here to help.</h2>
       <p>I've been helping clients communicate for over seven years. In that time, I've worked with everyone from billion-dollar corporations to innovative small businesses. Whether it's messaging for a new ad campaign, or a technical publication where details matter, I can put words to work for you.</p>
