--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <div class="header-links">
       <a href="CrystalQuimby_Resume_2023.pdf">résumé</a>
       <a href="index.html#projects">portfolio</a> 
-      <a href="index.html#contact">contact</a>
+      <a href="#contact">contact</a>
     </div>
   </header>
   </a>
