--- a/about.html
+++ b/about.html
@@ -39,8 +39,18 @@
     <h1 style="margin-top: 2.5rem;">About me</h1>
     <hr>
     <p>
-    Hi, I'm Crystal. I write stuff. Hire me.
+      Hi, I'm Crystal! I'm a designer and marketer and enthusiast of writing of all kinds &mdash; whether it's terse or tremendous, silly or serious, I can craft the copy that makes your message heard. I've been fortunate to have the opportunity to write for some of the most well-known brands in the world, but I absolutely love seeing small businesses grow and blossom through meaningful copy that builds connections with their customers. Let's build your brand together!
     </p>
+    <p style="padding-top: 0.7rem;">
+      Some cool Crystal facts:
+    </p>
+    <ul>
+    <li><p>I lived in Taiwan for almost six years and worked at the longest running English radio station in the country, International Community Radio Taipei (ICRT), where I was a copywriter, news broadcaster, and the occasional traffic girl and voice-over artist. One of my passions is bringing characters to life with my voice.</p></li>
+    <li><p>I have a background in traditional and digital art, including animation.</p></li>
+    <li>I'm critter-keeper to two of the cutest pets in the world, and I can prove&nbsp;it:</li>
+    </ul>
+    <img class="fuzzy-critters" src="./butters-spock-medium.png" alt="A super cute smiling dog and a fuzzy little guinea pig.">
+    
     <h1>About this site</h1>
     <hr>
     <p>
