--- a/about.html
+++ b/about.html
@@ -49,7 +49,9 @@
     <li><p>I have a background in traditional and digital art, including animation.</p></li>
     <li>I'm critter-keeper to two of the cutest pets in the world, and I can prove&nbsp;it:</li>
     </ul>
+    <div class="critter-container">
     <img class="fuzzy-critters" src="./butters-spock-medium.png" alt="A super cute smiling dog and a fuzzy little guinea pig.">
+    </div>
     
     <h1>About this site</h1>
     <hr>
