--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="george-bakos-1-1.jpg" width="200" alt="city traffic at night">
+            <a href="ckq-car-ads.pdf"><img class="" src="george-bakos-1-1.jpg" width="200" alt="city traffic at night"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 90px;">
               <h3>Ford, BMW, and Audi</h3>
               <p>Wrote and oversaw production of radio ads for world-renowned automotive brands promoting live events in Taiwan, including a road trip around the island with Ford and a charity golf tournament sponsored by Audi.</p>
+              <p><a href="ckq-car-ads.pdf">See sample.</a>
             </span>
           </div>
         </li>
