--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="project-details slide-parallax" style="--parallax-scroll: 90px;">
               <h3>Ford, BMW, and Audi</h3>
               <p>Wrote and oversaw production of radio ads for world-renowned automotive brands promoting live events in Taiwan, including a road trip around the island with Ford and a charity golf tournament sponsored by Audi.</p>
-              <p><a href="ckq-car-ads.pdf">See sample.</a>
+              <p><a href="ckq-car-ads.pdf">See sample.</a></p>
             </span>
           </div>
         </li>
