--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="crystal-quimby-1-1.jpg" width="200" alt="orange lanterns">
+            <a href="ckq-we-love-hakka.pdf"><img class="" src="crystal-quimby-1-1.jpg" width="200" alt="orange lanterns"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 100px">
               <h3>We Love Hakka</h3>
               <p>Radio scripts that uncovered the beauty and history of Hakka language, culture, and landmarks were anthologized in 2017.</p>
+              <p><a href="ckq-we-love-hakka.pdf">See sample.</a></p>
             </span>
           </div>
         </li>
