--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:image" content="https://0rangeQ.github.io/crystal-clear-copy-thumbnail.png"/>
 
   <link rel="icon" href="crystal-3.svg">
 
@@ -14,7 +15,7 @@
   
   <script defer src="contemporary.js"></script>
 
-  <title>Crystal Quimby - Writer and Marketer.</title>
+  <title>Crystal Quimby - Writer and Marketer</title>
 </head>
 
 <body>
