--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://0rangeQ.github.io/crystal-clear-copy-thumbnail.png"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="https://0rangeQ.github.io/crystal-clear-copy-thumbnail2.png"/>
  
 
   <link rel="icon" href="crystal-3.svg">
