Revise script and styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="contemporary.css">
   
-  <script defer src="contemporary.js"></script>
+  <script type="module" src="contemporary.js"></script>
 
   <title>Crystal Quimby - Writer and Marketer</title>
 </head>
