--- a/experimental.html
+++ b/experimental.html
@@ -22,9 +22,14 @@
 
 <body>
   <div class="debug-colors">
-    Gradient picker:
-    <input type="color" id="gradient-start">
-    <input type="color" id="gradient-end">
+    <div>
+      Gradient picker:
+      <input type="color" id="gradient-start">
+      <input type="color" id="gradient-end">
+    </div>
+    Shadow lightness:
+    <input type="range" id="shadow-multiplier" min="0" max="3" step="0.05" value="0.9">
+    <span id="shadow-multiplier-text" style="background-color: #000; padding: 0.25rem;"></span>
   </div>
   <a href="index.html" style="text-decoration:none;">
   <header class="personal-container">
