Add sedan image

--- a/experimental.html
+++ b/experimental.html
@@ -27,7 +27,7 @@
       <input type="color" id="gradient-start">
       <input type="color" id="gradient-end">
     </div>
-    Shadow lightness:
+    Box lightness:
     <input type="range" id="shadow-multiplier" min="0" max="3" step="0.05" value="0.9">
     <span id="shadow-multiplier-text" style="background-color: #000; padding: 0.25rem;"></span>
   </div>
@@ -76,7 +76,7 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <a href="ckq-car-ads.pdf"><img class="" src="george-bakos-1-1.jpg" width="200" alt="city traffic at night"></a>
+            <a href="ckq-car-ads.pdf"><img class="" src="car-photo-90.webp" width="200" alt="a sleek modern sedan"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 90px;">
