--- a/experimental.html
+++ b/experimental.html
@@ -3,10 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:type" content="website"/>
-  <meta property="og:image" content="https://0rangeQ.github.io/crystal-clear-copy-thumbnail2.png"/>
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://0rangeQ.github.io/splash-thumbnail-compressed.webp">
+  <meta property="og:image:width" content="987">
+  <meta property="og:image:height" content="615">
+  <meta name="description" content="Technical writer and marketer. Need words? I'm here to help.">
+  <meta property="og:title" content="Crystal Clear Copy">
+  <meta property="og:type" content="website">
+  <meta property="og:image:type" content="image/webp">
+  <meta property="og:image:alt" content="A clear, colorful banner reading 'Make your message crystal clear.'">
+  <meta property="og:url" content="https://crystalclearcopy.net">
+  <meta property="og:description" content="Technical writer and marketer. Need words? I'm here to help.">
+  <meta property="og:site_name" content="Crystal Clear Copy">
  
-
   <link rel="icon" href="crystal-3.svg">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
