Add fallback favicons

--- a/experimental.html
+++ b/experimental.html
@@ -8,15 +8,15 @@
   <meta property="og:image:width" content="987">
   <meta property="og:image:height" content="615">
   <meta name="description" content="Technical writer and marketer. Need words? I'm here to help.">
-  <meta property="og:title" content="Crystal Clear Copy">
+  <meta property="og:title" content="Crystal clear copy.">
   <meta property="og:type" content="website">
   <meta property="og:image:type" content="image/webp">
   <meta property="og:image:alt" content="A clear, colorful banner reading 'Make your message crystal clear.'">
   <meta property="og:url" content="https://crystalclearcopy.net">
   <meta property="og:description" content="Technical writer and marketer. Need words? I'm here to help.">
-  <meta property="og:site_name" content="Crystal Clear Copy">
+  <meta property="og:site_name" content="Crystal clear copy.">
  
-  <link rel="icon" href="crystal-3.svg">
+  <link rel="icon" href="/crystal-3.svg">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
