Draft modal dialogs

--- a/experimental.html
+++ b/experimental.html
@@ -30,6 +30,7 @@
 </head>
 
 <body>
+  <div id="modal-dialog" class="modal">Debug</div>
   <div class="debug-colors">
     <div>
       Gradient picker:
@@ -94,6 +95,13 @@
               <p><a href="ckq-car-ads.pdf">See sample.</a></p>
             </span>
           </div>
+          <template>
+            <h2>Car Ads Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quis in, cumque optio perferendis laudantium natus, est nulla reprehenderit sequi tempore officia earum! Adipisci error ab officiis et. Doloribus perferendis delectus deserunt, atque quos asperiores ex debitis illum libero neque!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores numquam nisi earum consequuntur molestiae harum minima recusandae dolor modi libero perferendis nobis soluta neque, at et quidem eveniet animi iure amet ipsum distinctio mollitia aperiam quas quo? Corrupti, esse nesciunt.</p>
+            <h3>Sample Subtitle</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus ipsa sint tempora nihil cumque dolorem ab voluptatibus, molestiae voluptatem eligendi laborum sunt error aut dolore provident perferendis excepturi dignissimos ea quam reprehenderit. Quia, mollitia repellat quas neque illum sed ducimus?</p>
+          </template>
         </li>
         <li>
           <div class="illustration-container">
@@ -131,6 +139,17 @@
               <p><a href="ckq-we-love-hakka.pdf">See sample.</a></p>
             </span>
           </div>
+          <template>
+            <h2>Hakka Sample Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum non itaque quia esse corporis! Laboriosam obcaecati sunt nostrum ea voluptates. Magnam quibusdam doloribus quisquam magni! Sapiente deleniti doloremque officiis a pariatur eius magnam voluptatem consequatur, cumque, inventore, corporis distinctio illum.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis voluptatum illo doloremque tempore beatae nemo optio voluptatem culpa praesentium voluptatibus aliquid ullam qui dolorum sint eos aspernatur, rerum eum dignissimos omnis. Dignissimos quidem recusandae est ipsum asperiores vero voluptates libero!</p>
+            <h3>Hakka Subtitle</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
+          </template>
         </li>
         <li>
           <div class="illustration-container">
@@ -157,6 +176,7 @@
               <a href="http://www.icrt.com.tw/wordpress/blog/author/crystalquimby/">See sample.</a>
             </span>
           </div>
+
         </li>
         <li>
           <div class="illustration-container">
